# CWire

./: .gitignore  CMakeLists.txt  LICENSE  README.md  delegate.hpp  event.hpp  library.cpp  multidelegate.hpp  property.hpp
src/: delegate.hpp  multidelegate.hpp  property.hpp
